--- a/Front-end/index.html
+++ b/Front-end/index.html
@@ -7,6 +7,7 @@
 		<link rel="stylesheet" type="text/css" href="stylesheets/main-page-style.css">
 		<link rel="stylesheet" type="text/css" href="stylesheets/reset.css">
 		<link href='https://fonts.googleapis.com/css?family=Raleway' rel='stylesheet' type='text/css'>
+		<link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon">
 	</head>
 	<body>
 		<header>
